# workflow-engine

./: .gitignore  HLD.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tests/: __init__.py  conftest.py
tests/fixtures/: sample_workflows.yaml
tests/integration/: test_workflow_execution.py
tests/unit/: test_compensation.py  test_dsl_parser.py  test_state_machine.py  test_workflow_service.py
workflow_engine/: __init__.py  worker.py
workflow_engine/api/: __init__.py  main.py  schemas.py  services.py
workflow_engine/api/routes/: approvals.py  executions.py  workflows.py
workflow_engine/core/: __init__.py  state_machine.py  task_executor.py  workflow_definition.py  workflow_executor.py  workflow_registry.py  workflows.py
workflow_engine/core/activities/: README.md  __init__.py  base.py
workflow_engine/dsl/: __init__.py  parser.py  schema.py  validator.py
workflow_engine/storage/: __init__.py  database.py  models.py
workflow_engine/storage/repositories/: __init__.py  approval_repository.py  execution_repository.py  sqlalchemy_approval_repository.py  sqlalchemy_execution_repository.py  sqlalchemy_workflow_repository.py  workflow_repository.py
workflows/: README.md  compensation_demo_workflow.yaml  human_approval_workflow.yaml  order_processing_workflow.yaml  sample.yaml
